crates/stef-compiler/tests/inputs/invalid/resolve_sub_nested2.stef
struct Sample {
    value: inner::a::b::c::Other @1,
}

mod inner {
    mod a {
        mod d {
            mod c {}
        }
    }
}
